Alignment Fix

--- a/style/style.css
+++ b/style/style.css
@@ -50,23 +50,23 @@ a:hover {
 }
 
 main {
-    padding: 25px;
+    padding: 50px;
 }
 
 #main-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    text-align: justify;
     background-image: linear-gradient(to right bottom, #f2f2f280, #F2F2F21a);
     border-radius: 10px;
     backdrop-filter: blur(5px);
     box-shadow: 0px 5px 5px 0px #00000033, 0px 0px 0px 1px #f2f2f280 inset;
-    padding: 12.5px;
+    padding: 25px;
     max-width: 1309px;
     margin: auto;
 }
 
+
 .card-container {
+    display: inline-block;
     background-image: linear-gradient(to right bottom, #f2f2f280, #f2f2f21a);
     border-radius: 10px;
     backdrop-filter: blur(5px);
@@ -76,8 +76,9 @@ main {
     margin: 12.5px;
 }
 
+
 .card {
-    max-width: 179px;
+    width: 179px;
     height: 250px;
     margin: 5px;
 }
